--- a/miniProject.vcxproj
+++ b/miniProject.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CMatrix.h" />
+    <ClInclude Include="const.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CMatrix.cpp" />
