--- a/miniProject.vcxproj.filters
+++ b/miniProject.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="CMatrix.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="const.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CMatrix.cpp">
