--- a/miniProject.vcxproj.filters
+++ b/miniProject.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="CMatrix.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
