add custom Exceptions

--- a/miniProject.vcxproj.filters
+++ b/miniProject.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="MatrixException.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="FileError.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CMatrix.cpp">
@@ -34,6 +37,9 @@
     </ClCompile>
     <ClCompile Include="simpleTests.h">
       <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="FileError.cpp">
+      <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
