--- a/miniProject.vcxproj
+++ b/miniProject.vcxproj
@@ -153,10 +153,12 @@
   <ItemGroup>
     <ClInclude Include="CMatrix.h" />
     <ClInclude Include="const.h" />
+    <ClInclude Include="FileError.h" />
     <ClInclude Include="MatrixException.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CMatrix.cpp" />
+    <ClCompile Include="FileError.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="simpleTests.h" />
   </ItemGroup>
