refactor readMatrixFromFile(), start working on MatrixError class

--- a/miniProject.vcxproj
+++ b/miniProject.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="CMatrix.h" />
     <ClInclude Include="const.h" />
     <ClInclude Include="FileError.h" />
+    <ClInclude Include="MatrixError.h" />
     <ClInclude Include="MatrixException.h" />
   </ItemGroup>
   <ItemGroup>
