--- a/miniProject.vcxproj.filters
+++ b/miniProject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="FileError.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="MatrixError.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CMatrix.cpp">
