implemetn AVX/AVX2 instructions in multiplication matrixes operation.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,37 @@
 ################################################################################
 
 /.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/Matrix_Operations/v16/ipch/AutoPCH/f863268d236c7c4a/CMATRIX.ipch
+/.vs/Matrix_Operations/v16/ipch/AutoPCH/bd06c3728ec9485/MAIN.ipch
+/.vs/Matrix_Operations/v16/Browse.VC.opendb
+/.vs/Matrix_Operations/v16/Browse.VC.db-wal
+/.vs/Matrix_Operations/v16/Browse.VC.db-shm
+/.vs/Matrix_Operations/v16/Browse.VC.db
+/.vs/Matrix_Operations/v16/.suo
+/Matrix_Operations.vcxproj.user
+/x64/Debug/vc142.pdb
+/x64/Debug/vc142.idb
+/x64/Debug/Matrix_Operations.vcxproj.FileListAbsolute.txt
+/x64/Debug/Matrix_Operations.pdb
+/x64/Debug/Matrix_Operations.log
+/x64/Debug/Matrix_Operations.ilk
+/x64/Debug/Matrix_Operations.exe.recipe
+/x64/Debug/Matrix_Operations.exe
+/x64/Debug/Matrix_O.a3c06fd7.tlog/Matrix_Operations.lastbuildstate
+/x64/Debug/Matrix_O.a3c06fd7.tlog/link.write.1.tlog
+/x64/Debug/Matrix_O.a3c06fd7.tlog/link.read.1.tlog
+/x64/Debug/Matrix_O.a3c06fd7.tlog/link.command.1.tlog
+/x64/Debug/Matrix_O.a3c06fd7.tlog/CL.write.1.tlog
+/x64/Debug/Matrix_O.a3c06fd7.tlog/CL.read.1.tlog
+/x64/Debug/Matrix_O.a3c06fd7.tlog/CL.command.1.tlog
+/x64/Debug/main.obj
+/x64/Debug/FileError.obj
+/x64/Debug/CMatrix.obj
+/.vs/VSWorkspaceState.json
+/.vs/Matrix_Operations/v16/ipch/AutoPCH/da115b8bdb86771f/CMATRIX.ipch
+/.vs/Matrix_Operations/v16/ipch/AutoPCH/c72cdb559b5801d7/CMTX.ipch
+/.vs/Matrix_Operations/v16/ipch/AutoPCH/3be57d24cb28ab62/CMTX.ipch
+/.vs/Matrix_Operations/v16/ipch/AutoPCH/361a3737c4690bd8/CMTX.ipch
+/x64/Debug/Matrix_Operations.Build.CppClean.log
+/.vs/Matrix_Operations/v16/ipch/AutoPCH/79047a83b66f423e/CMTX.ipch
