--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /.vs/Matrix_Operations/v16/Browse.VC.db
 /.vs/Matrix_Operations/v16/.suo
 /Matrix_Operations.vcxproj.user
+/x64
 /x64/Debug/vc142.pdb
 /x64/Debug/vc142.idb
 /x64/Debug/Matrix_Operations.vcxproj.FileListAbsolute.txt
@@ -40,3 +41,6 @@
 /.vs/Matrix_Operations/v16/ipch/AutoPCH/d54166f8b1a8d623/CMTX.ipch
 /.vs/Matrix_Operations/v16/ipch/AutoPCH/94eac44d408009fb/CMTX.ipch
 /.vs/Matrix_Operations/v16/ipch/AutoPCH/213d3222f6c681c6/CMTX.ipch
+/x64/Debug/main.obj.enc
+/.vs/Matrix_Operations/v16/ipch/AutoPCH/ae4d0a3c81759bf0/SIMPLETESTS.ipch
+/header/simpleTests.h
